Add  All Function

--- a/digitalreceipt.html
+++ b/digitalreceipt.html
@@ -181,7 +181,7 @@
     <div class="button-container">
       <button class="button" onclick="addRow()">Add Row</button>
       <button class="button" onclick="printTable()">Print Table</button>
-      <a href="main.html" target="_blank">
+      <a href="index.html" target="_blank">
         <i class="fa fa-youtube-play" aria-hidden="true"></i> &nbsp;Back  
       </a>
     </div>
