--- a/index.html
+++ b/index.html
@@ -1,119 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Awesome Website</title>
-  <link rel="stylesheet" href="style.css">
- 
-</head>
-<body>
-  <div class="backg">
-		<div class="planet">
-			<div class="r1"></div>
-			<div class="r2"></div>
-			<div class="r3"></div>
-			<div class="r4"></div>
-			<div class="r5"></div>
-			<div class="r6"></div>
-			<div class="r7"></div>
-			<div class="r8"></div>
-			<div class="shad"></div>
-		</div>
-		<div class="stars">
-			<div class="s1"></div>
-			<div class="s2"></div>
-			<div class="s3"></div>
-			<div class="s4"></div>
-			<div class="s5"></div>
-			<div class="s6"></div>
-		</div>
-		<div class="an">
-			<div class="tank"></div>
-			<div class="astro">
-					
-					<div class="helmet">
-						<div class="glass">
-							<div class="shine"></div>
-						</div>
-					</div>
-					<div class="dress">
-						<div class="c">
-							<div class="btn1"></div>
-							<div class="btn2"></div>
-							<div class="btn3"></div>
-							<div class="btn4"></div>
-						</div>
-					</div>
-					<div class="handl">
-						<div class="handl1">
-							<div class="glovel">
-								<div class="thumbl"></div>
-								<div class="b2"></div>
-							</div>
-						</div>
-					</div>
-					<div class="handr">
-						<div class="handr1">
-							<div class="glover">
-								<div class="thumbr"></div>
-								<div class="b1"></div>
-							</div>
-						</div>
-					</div>
-					<div class="legl">
-						<div class="bootl1">
-							<div class="bootl2"></div>
-						</div>
-					</div>
-					<div class="legr">
-						<div class="bootr1">
-							<div class="bootr2"></div>
-						</div>
-					</div>
-					<div class="pipe">
-						<div class="pipe2">
-							<div class="pipe3"></div>
-						</div>
-					</div>
-				</div>
-			</div>
-    </div>
-    <div>
-     
-      <div class="header">
-        <h1 style="color: rgb(22, 194, 237)">SAKSHI RAIL CARGO</h1>
-        <p>DOMESRIC & INTERNATIONAL FREIGHT FORWARDER</p>
-        <p>
-          Offie Add H.No.F-185,Gali No-8,Gaytri Clony,Baljit Nagar, Central
-          Delhi,Delhi-110008
-        </p>
-        <h3>MOB:-9540706399, Email.id-sakshirailcargo2019@gmail.com</h3>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Awesome Website</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="backg">
+      <div class="planet">
+        <div class="r1"></div>
+        <div class="r2"></div>
+        <div class="r3"></div>
+        <div class="r4"></div>
+        <div class="r5"></div>
+        <div class="r6"></div>
+        <div class="r7"></div>
+        <div class="r8"></div>
+        <div class="shad"></div>
       </div>
+      <div class="stars">
+        <div class="s1"></div>
+        <div class="s2"></div>
+        <div class="s3"></div>
+        <div class="s4"></div>
+        <div class="s5"></div>
+        <div class="s6"></div>
+      </div>
+      <div class="an">
+        <div class="tank"></div>
+        <div class="astro">
+          <div class="helmet">
+            <div class="glass">
+              <div class="shine"></div>
+            </div>
+          </div>
+          <div class="dress">
+            <div class="c">
+              <div class="btn1"></div>
+              <div class="btn2"></div>
+              <div class="btn3"></div>
+              <div class="btn4"></div>
+            </div>
+          </div>
+          <div class="handl">
+            <div class="handl1">
+              <div class="glovel">
+                <div class="thumbl"></div>
+                <div class="b2"></div>
+              </div>
+            </div>
+          </div>
+          <div class="handr">
+            <div class="handr1">
+              <div class="glover">
+                <div class="thumbr"></div>
+                <div class="b1"></div>
+              </div>
+            </div>
+          </div>
+          <div class="legl">
+            <div class="bootl1">
+              <div class="bootl2"></div>
+            </div>
+          </div>
+          <div class="legr">
+            <div class="bootr1">
+              <div class="bootr2"></div>
+            </div>
+          </div>
+          <div class="pipe">
+            <div class="pipe2">
+              <div class="pipe3"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="textSection">
+      <a href="Quantation.html" target="_blank">
+        <i class="fa fa-youtube-play" aria-hidden="true"></i> &nbsp;QUATATION
+      </a>
+      <a href="journalVoucher.html" target="_blank">
+        <i class="fa fa-youtube-play" aria-hidden="true"></i> &nbsp;JOURNAL
+        VOUCHER
+      </a>
 
+      <a href="digitalreceipt.html" target="_blank">
+        <i class="fa fa-youtube-play" aria-hidden="true"></i> &nbsp;Digital
+        Receipt
+      </a>
 
-<a href="Quantation.html" target="_blank">
-  <i class="fa fa-youtube-play" aria-hidden="true"></i> &nbsp;QUATATION 
-</a>
-<a href="journalVoucher.html" target="_blank">
-  <i class="fa fa-youtube-play" aria-hidden="true"></i> &nbsp;JOURNAL VOUCHER 
-</a>
-
-<a href="digitalreceipt.html" target="_blank">
-  <i class="fa fa-youtube-play" aria-hidden="true"></i> &nbsp;Digital Receipt  
-</a>
-
-<div
-style="
-  text-align: end;
-  font-size: semi;
-  color: #d7f512;
-  padding-right: 25px;
-  padding-top: 50px;
-"
->
-created by Sangam jha
-</div>
-
-</body>
+      <div
+        style="
+          text-align: end;
+          font-size: semi;
+          color: #d7f512;
+          padding-right: 25px;
+          padding-top: 50px;
+        "
+      >
+        created by Sangam jha
+      </div>
+    </div>
+  </body>
 </html>
