--- a/journalVoucher.html
+++ b/journalVoucher.html
@@ -174,7 +174,7 @@
       <button class="addRow" onclick="addRow()">Add Row</button>
 
       <button class="button" onclick="printTable()">Print</button>
-      <a href="main.html" target="_blank">
+      <a href="index.html" target="_blank">
         <i class="fa fa-youtube-play" aria-hidden="true"></i> &nbsp;Back  
       </a>
     </div>
