--- a/digitalreceipt.html
+++ b/digitalreceipt.html
@@ -218,7 +218,7 @@
           if (cells[i] === "Serial") {
             cell.className = "serial-number";
             cell.innerHTML = table.rows.length - 1; // Set serial number
-          } else if (cells[i] === "$RS") {
+          } else if (cells[i] === "$R") {
             cell.innerHTML = '<input type="text" readonly>';
           } else if (cells[i] === "Action") {
             cell.innerHTML =
@@ -268,6 +268,7 @@
       // Example: Set the input field value with today's date in dd/mm/yyyy format
       var today = new Date();
       document.getElementById("dateInput").value = formatDate(today);
+      
     </script>
   </body>
 </html>
